[gd_scene load_steps=6 format=2]

[ext_resource path="res://WScripts/Word_Spire.gd" type="Script" id=1]
[ext_resource path="res://WAssets/obelisk.png" type="Texture" id=2]
[ext_resource path="res://WAssets/Enter_Key.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.3846, 7.30769 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 37.6922
height = 49.2311

[node name="Word_Spire" type="KinematicBody2D"]
scale = Vector2( 1.3, 1.3 )
z_index = -10
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -19 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.384616, 5.76923 )
shape = SubResource( 3 )

[node name="Enter_key" type="Sprite" parent="."]
position = Vector2( 0, 21.5385 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -7.62939e-06, 6.15385 )
rotation = 1.5708
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
